--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import BackToTop from "@components/BackToTop.astro";
     </div>
     <div class="flex items-center justify-between">
       <div>&copy; {new Date().getFullYear()} • {SITE.TITLE} 🔬</div>
-      <div class="flex flex-wrap items-center gap-1.5">
+      <!-- <div class="flex flex-wrap items-center gap-1.5">
         <button
           id="light-theme-button"
           aria-label="Light theme"
@@ -84,7 +84,7 @@ import BackToTop from "@components/BackToTop.astro";
             <line x1="12" y1="17" x2="12" y2="21"></line>
           </svg>
         </button>
-      </div>
+      </div> -->
     </div>
   </Container>
 </footer>
