--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,66 +10,46 @@ import type { CollectionEntry } from "astro:content";
 const blog = (await getCollection("blog"))
   .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
+  //.slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
 
-const projects: CollectionEntry<"projects">[] = (
-  await getCollection("projects")
-)
-  .filter((project) => !project.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0, SITE.NUM_PROJECTS_ON_HOMEPAGE);
+// const projects: CollectionEntry<"projects">[] = (
+//   await getCollection("projects")
+// )
+//   .filter((project) => !project.data.draft)
+//   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
+//   .slice(0, SITE.NUM_PROJECTS_ON_HOMEPAGE);
 ---
 
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h1 class="animate font-semibold text-black dark:text-white">
-      Introducing Astro Micro 🔬
+     Introduction
     </h1>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <span class="animate">
             <p>
-              Astro Micro is an accessible theme for <Link
-                href="https://astro.build/">Astro</Link
-              >. It's a fork of
-              <Link href="https://github.com/markhorn-dev"> Mark Horn's </Link> popular
-              theme <Link href="https://astro.build/themes/details/astronano/"
-                >Astro Nano</Link
-              >. Like Nano, Micro comes with zero frameworks installed.
+              People often talk about the idea of caveman wellness as a way of living like our ancient ancestors did. It's about getting back to basics and embracing a simpler lifestyle. This concept revolves around the belief that our bodies are best suited to the types of foods, activities, and environments that our early human ancestors experienced.
+
             </p>
-            <p>
-              Micro adds features like <Link href="https://pagefind.app/"
-                >Pagefind</Link
-              > for search, <Link href="https://giscus.app">Giscus</Link> for comments,
-              and more. For a full list of changes, see this <Link
-                href="/blog/00-micro-changelog">blog post</Link
-              >.
-            </p>
+            <!-- <p>
+              Start with Your Diet: Transitioning to a caveman diet can be a great first step. Begin by removing processed foods, sugars, and grains from your pantry. Focus on incorporating more lean proteins, fresh fruits and vegetables, nuts, and seeds into your meals. Experiment with new recipes and cooking methods to make the transition enjoyable.
+Move Your Body: Find ways to incorporate movement into your daily routine. This could be as simple as taking a daily walk, participating in a fitness class, or trying out a new outdoor activity. The key is to move your body in ways that feel natural and enjoyable to you. Remember, consistency is key, so aim to be active every day, even if it's just for a short time.
+Prioritize Sleep: Create a sleep-friendly environment by making your bedroom dark, cool, and quiet. Set a consistent sleep schedule by going to bed and waking up at the same time each day. Wind down before bed by avoiding screens, practicing relaxation techniques like deep breathing or meditation, and establishing a bedtime routine that signals to your body that it's time to rest.
+Connect with Nature: Spend time outdoors as much as possible. This could involve going for a hike in the woods, having a picnic in the park, or simply sitting outside and soaking up some sunlight. Take a moment to appreciate the beauty of nature, breathe in the fresh air, and ground yourself by walking barefoot on grass or soil.
+By incorporating these principles of caveman wellness into your life, you can tap into the inherent wisdom of our ancestors and promote your overall health and well-being. Remember, it's not about perfection but making gradual, sustainable changes that align with the natural rhythms of your body and the world around you.
+            </p> -->
           </span>
-          <span class="animate">
-            <p>
-              Micro still comes with everything great about Nano — full type
-              safety, a sitemap, an RSS feed, and Markdown + MDX support. Styled
-              with TailwindCSS and preconfigured with system, light, and dark
-              themes.
-            </p>
-            <p>
-              Visit
-              <Link href="https://github.com/trevortylerlee/astro-micro">
-                Astro Micro on GitHub
-              </Link>
-              to fork the repository to get started.
-            </p>
-          </span>
+
         </article>
       </section>
 
       <section class="animate space-y-6">
-        <div class="flex flex-wrap items-center justify-between gap-y-2">
+        <!-- <div class="flex flex-wrap items-center justify-between gap-y-2">
           <h2 class="font-semibold text-black dark:text-white">Latest posts</h2>
           <Link href="/blog"> See all posts </Link>
-        </div>
+        </div> -->
         <ul class="not-prose flex flex-col gap-4">
           {
             blog.map((post) => (
@@ -81,57 +61,6 @@ const projects: CollectionEntry<"projects">[] = (
         </ul>
       </section>
 
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap items-center justify-between gap-y-2">
-          <h2 class="font-semibold text-black dark:text-white">
-            Recent projects
-          </h2>
-          <Link href="/projects"> See all projects </Link>
-        </div>
-        <ul class="not-prose flex flex-col gap-4">
-          {
-            projects.map((project) => (
-              <li>
-                <ArrowCard entry={project} />
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-
-      <section class="animate space-y-4">
-        <h2 class="font-semibold text-black dark:text-white">Let's Connect</h2>
-        <article>
-          <p>
-            If you want to get in touch with me about something or just to say
-            hi, reach out on social media or send me an email.
-          </p>
-        </article>
-        <ul class="not-prose flex flex-wrap gap-2">
-          {
-            SOCIALS.map((SOCIAL) => (
-              <li class="flex gap-x-2 text-nowrap">
-                <Link
-                  href={SOCIAL.HREF}
-                  external
-                  aria-label={`${SITE.TITLE} on ${SOCIAL.NAME}`}
-                >
-                  {SOCIAL.NAME}
-                </Link>
-                {"/"}
-              </li>
-            ))
-          }
-          <li class="line-clamp-1">
-            <Link
-              href={`mailto:${SITE.EMAIL}`}
-              aria-label={`Email ${SITE.TITLE}`}
-            >
-              {SITE.EMAIL}
-            </Link>
-          </li>
-        </ul>
-      </section>
     </div>
   </Container>
 </Layout>
