--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,18 +9,16 @@ import { SITE } from "@consts";
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
         <div class="font-semibold">
-          {SITE.TITLE}&nbsp;🔬
+          {SITE.TITLE}
         </div>
       </Link>
       <nav class="flex items-center gap-1 text-sm">
-        <Link href="/blog">blog</Link>
+        <!-- <Link href="/blog">Book</Link>
+        &nbsp;
         <span>
           {`/`}
         </span>
-        <Link href="/projects">projects</Link>
-        <span>
-          {`/`}
-        </span>
+        &nbsp; -->
         <button
           id="magnifying-glass"
           aria-label="Search"
