--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,9 @@ import type { CollectionEntry } from "astro:content";
 
 const blog = (await getCollection("blog"))
   .filter((post) => !post.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  //.slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
+  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
+
+//.slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
 
 // const projects: CollectionEntry<"projects">[] = (
 //   await getCollection("projects")
