caveman's guide title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,7 @@ const blog = (await getCollection("blog"))
       <section>
         <article class="space-y-4">
           <span class="animate">
+            <p>A caveman's guide to surving in the modern industrial landscpe.</p>
             <p>
               People often talk about the idea of caveman wellness as a way of living like our ancient ancestors did. It's about getting back to basics and embracing a simpler lifestyle. This concept revolves around the belief that our bodies are best suited to the types of foods, activities, and environments that our early human ancestors experienced.
 
