--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,14 @@ const blog = (await getCollection("blog"))
       <section>
         <article class="space-y-4">
           <span class="animate">
-            <p>A caveman's guide to surving in the modern industrial landscpe.</p>
+            <p>A caveman's guide to surving the modern industrial landscpe.</p>
+            <p><b> Times have changed. </b></p> 
             <p>
-              People often talk about the idea of caveman wellness as a way of living like our ancient ancestors did. It's about getting back to basics and embracing a simpler lifestyle. This concept revolves around the belief that our bodies are best suited to the types of foods, activities, and environments that our early human ancestors experienced.
+            
+              People often talk about the idea of health as a way of living like our ancient ancestors did. 
+              It's about getting back to basics and embracing a simpler lifestyle. 
+              This concept revolves around the belief that our bodies are best suited to the types of foods,
+               activities, and environments that our early human ancestors experienced.
 
             </p>
             <!-- <p>
