chore: Update site metadata and settings

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,20 +23,16 @@ const blog = (await getCollection("blog"))
 
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
-    <h2 class="animate font-semibold text-black dark:text-white">
-     Introduction
-    </h2>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <span class="animate">
-            <p>A caveman's guide to surving the modern industrial landscape.</p>
             <p><b> Times have changed. </b></p> 
             
             <p>
             
-              Look around you. The life expectancy of people is dropping. 
-              Why is that? What could be happening? As a person who woke up one day to
+              Look around you. For the first time, the life expectancy of people is plummeting. 
+              Why is that? As a person who woke up one day to
               find out he had heart disease and needed bypass surgery I endeavored to find out.
               </p>
               <p>
@@ -54,13 +50,9 @@ const blog = (await getCollection("blog"))
   
               </p>
               <p>
-                By starting with a first principle - what we do and eat now is very different 
-                than 100 years ago -  let alone a 1000.
-
-            <p>
-              Caveman's guide to surviving the modern industrial landscape.
-            </p>
-              
+                Let's start with a first principle - what we do and eat now is very different 
+                than 150 years ago. Let's interogate the things we do 
+                and  eat today though the eyes of "A caveman's guide surviving the modern landscape.".
           </span>
 
         </article>
