--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,9 @@ import { SITE } from "@consts";
         <div class="font-semibold">
           {SITE.TITLE}
         </div>
+        <div class="text-xs text-neutral-500">
+          {SITE.DESCRIPTION}
+        </div>
       </Link>
       <nav class="flex items-center gap-1 text-sm">
         <!-- <Link href="/blog">Book</Link>
