feat: Update blog post about gout and apple fritters

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ const blog = (await getCollection("blog"))
               </p>
               <p>
                 Let's start with a first principle - what we do and eat now is very different 
-                than 150 years ago. Let's interogate the things we do 
+                than 150 years ago. We'll interogate the things we do 
                 and  eat today though the eyes of "A caveman's guide surviving the modern landscape.".
           </span>
 
