Update README.md and index.astro files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,13 +27,14 @@ const blog = (await getCollection("blog"))
       <section>
         <article class="space-y-4">
           <span class="animate">
+            <img src="/images/caveman.png" alt="Hero image" class="rounded-lg" />
             <p><b> Times have changed. </b></p> 
             
             <p>
             
-              Look around you. For the first time, the life expectancy of people is plummeting. 
+              For the first time, the life expectancy of people is decreasing. 
               Why is that? As a person who woke up one day to
-              find out he had heart disease and needed bypass surgery I endeavored to find out.
+              find out he had heart disease and needed bypass surgery,   I endeavored to find out.
               </p>
               <p>
               <b>You are what you eat</b>
@@ -50,9 +51,16 @@ const blog = (await getCollection("blog"))
   
               </p>
               <p>
-                Let's start with a first principle - what we do and eat now is very different 
-                than 150 years ago. We'll interogate the things we do 
-                and  eat today though the eyes of "A caveman's guide surviving the modern landscape.".
+                <b>Let's start with a first principle</b>  
+              </p>
+              <p>
+                What is different about the food we eat today compared to the food our ancestors ate 150 years ago?
+                What do we <i>do</i> differently?
+              </p>
+              <p>
+                In this book, we'll interogate the things we do 
+                and eat though the eyes of "A caveman's guide surviving the modern landscape".
+              </p>
           </span>
 
         </article>
