--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -52,7 +52,7 @@ const { Content, headings } = await post.render();
 <Layout title={post.data.title} description={post.data.description}>
   <Container>
     <div class="animate">
-      <BackToPrevious href="/">Back to book</BackToPrevious>
+      <BackToPrevious href="/blog">Back to book</BackToPrevious>
     </div>
     <div class="my-10 space-y-1">
       <!-- <div class="animate flex items-center gap-1.5">
