feat: Improve image styling and positioning on the homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
   <Container>
      <ArrowCardStatic/>
       <section class="space-y-4">
-        <article >
+        <article id="article" >
 
 
             <p><b> Times have changed</b></p> 
@@ -46,14 +46,15 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
                 In this book, we'll look at the things we do 
                 and eat though the eyes of "A caveman's guide surviving the modern landscape".
               </p>
+              <img src="/images/caveman-rem.png" alt="food"/>
+           </article>
            
-              <p> 
-                <img src="/images/caveman2.png" alt="food" class="rounded-lg"/>
-             </p>              
 
+          <!-- <img src="/images/caveman2.png" alt="food" class="rounded-lg mb-10"/> -->
+       
 
-        </article>
       </section>
+      
       <ArrowCardStatic/>
   </Container>
 </Layout>
