--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+#article img {
+  filter: brightness(10%);
+  position: absolute;
+  left: 10%; 
+  top: 10%; 
+  z-index: -1;
+
+
+}
+
 blockquote {
   background-color:black;
   padding-bottom: 1em;
