feat: Update book-related components and content

--- a/src/pages/book/[...slug].astro
+++ b/src/pages/book/[...slug].astro
@@ -10,7 +10,7 @@ import TableOfContents from "@components/TableOfContents.astro";
 import Giscus from "@components/Giscus.astro";
 
 export async function getStaticPaths() {
-  const posts = (await getCollection("blog"))
+  const posts = (await getCollection("book"))
     .filter((post) => !post.data.draft)
     .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
   return posts.map((post) => ({
@@ -18,9 +18,9 @@ export async function getStaticPaths() {
     props: post,
   }));
 }
-type Props = CollectionEntry<"blog">;
+type Props = CollectionEntry<"book">;
 
-const posts = await getCollection("blog");
+const posts = await getCollection("book");
 
 function getNextPost() {
   let postIndex;
@@ -52,18 +52,9 @@ const { Content, headings } = await post.render();
 <Layout title={post.data.title} description={post.data.description}>
   <Container>
     <div class="animate">
-      <BackToPrevious href="/blog">Back to book</BackToPrevious>
+      <BackToPrevious href="/book">Back to book</BackToPrevious>
     </div>
     <div class="my-10 space-y-1">
-      <!-- <div class="animate flex items-center gap-1.5">
-        <div class="font-base text-sm">
-          <FormattedDate date={post.data.date} />
-        </div>
-        &bull;
-        <div class="font-base text-sm">
-          {readingTime(post.body)}
-        </div>
-      </div> -->
       <h1 class="animate text-3xl font-semibold text-black dark:text-white">
         {post.data.title}
       </h1>
