--- a/src/components/ArrowCardStatic.astro
+++ b/src/components/ArrowCardStatic.astro
@@ -8,7 +8,7 @@
           Get started
         </div>
         <div class="text-sm">
-          with the book
+          reading the book
         </div>
       </div>
       <svg
