--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,10 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
             
             <p>
             
-              For the first time in modern times, the life expectancy of people is decreasing. 
-              Why is that? As a person who woke up one day to
+              For the first time in modern times, the life expectancy of people is decreasing. Why?
+            </p>
+            <p></p>
+               As a person who woke up one day to
               find out he had heart disease and needed bypass surgery,   I endeavored to find out.
               </p>
               <p>
@@ -36,7 +38,7 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
   
               </p>
               <p>
-                <b>Let's start with a first principle</b>  
+                <b>Starting with a first principle</b>  
               </p>
               <p>
                 What is different about the food we eat today compared to the food our ancestors ate 150 years ago?
@@ -44,7 +46,7 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
               </p>
               <p>
                 In this book, we'll look at the things we do 
-                and eat though the eyes of "A caveman's guide surviving the modern landscape".
+                and eat though the eyes of <b>"A caveman's guide surviving the modern landscape"</b>.
               </p>
               <img src="/images/caveman-rem.png" alt="food"/>
            </article>
