Update book descriptions for consistency

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,17 +26,17 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
       </p>
       <p>
         A large measure of the problem is the food we eat. If you eat processed
-        garbage you will end up with any number of chronic diseases. Most of
+        "food" you will end up with any number of chronic diseases. Most of
         them because of insulin resistance - but the story is more complex than
         that.
       </p>
-      <p>
+      <!--p>
         People often talk about the idea of health as a way of living like our
         ancient ancestors did. It's about getting back to basics and embracing a
         simpler lifestyle. This concept revolves around the belief that our
         bodies are best suited to the types of foods, activities, and
         environments that our early human ancestors experienced.
-      </p>
+      </p-->
       <p>
         <b>Starting with a first principle</b>
       </p>
@@ -45,14 +45,14 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
         ancestors ate 150 years ago? What do we <b>do</b> differently?
       </p>
       <p>
-        In this book, we'll look at the things we do and eat though the eyes of <b
-          >"A caveman's guide surviving the modern landscape"</b>.
+        In this book, we'll look at the things we do and eat though the eyes of 
+        <b>"A caveman's guide to surviving the modern industrial landscape"</b>.
       </p>
       <img src="/images/caveman-rem.png" alt="food" />
-      <ArrowCardStatic />
+      
     </article>
     </section>
-
+    <ArrowCardStatic />
     <!-- <img src="/images/caveman2.png" alt="food" class="rounded-lg mb-10"/> -->
   </Container>
 
