--- a/src/components/ArrowCard.astro
+++ b/src/components/ArrowCard.astro
@@ -23,7 +23,7 @@ let chapter = Astro.props.chapter as number;
       {entry.data.description}
     </div>
   </div>
-  <b style="padding-top:10px">{chapter}</b>
+  <b style="padding-top:10px;color:rgb(78, 73, 67)">{chapter}</b>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
